--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Bridger Herman <herma582@umn.edu>"]
 [dependencies]
 image = "0.19"
 clap = "2.32"
+conrod = { version = "0.61", features = ["glium", "winit"] }
 
 [dev-dependencies]
 glm = "0.2"
