--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,18 @@
 [package]
-name = "raytracer-5607"
+name = "wasm-raytracer"
 version = "0.1.0"
-authors = ["Bridger Herman <herma582@umn.edu>"]
+authors = ["Bridger Herman"]
+edition = "2018"
+
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
-image = "0.19"
-clap = "2.32"
-conrod = { version = "0.61", features = ["glium", "winit"] }
+wasm-bindgen = "0.2"
+base64 = "0.10"
+png = "0.14"
+wasm-logger = {git = "https://github.com/bridger-herman/wasm-logger.git"}
+log = "0.4"
 
 [dev-dependencies]
 glm = "0.2"
